baml_language/crates/baml_tests/snapshots/formatter/baml_tests__formatter__02_parser__extra_semicolons.snap
---
source: target/debug/build/baml_tests-17af2d4231950a65/out/generated_tests.rs
expression: output
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "Foo"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        BINARY_EXPR "x + 1"
          WORD "x"
          PLUS "+"
          INTEGER_LITERAL "1"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        BINARY_EXPR "x + 1"
          WORD "x"
          PLUS "+"
          INTEGER_LITERAL "1"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        BINARY_EXPR "x + 1"
          WORD "x"
          PLUS "+"
          INTEGER_LITERAL "1"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        BINARY_EXPR "x + 1"
          WORD "x"
          PLUS "+"
          INTEGER_LITERAL "1"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        BINARY_EXPR "x + 1"
          WORD "x"
          PLUS "+"
          INTEGER_LITERAL "1"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        BINARY_EXPR "x + 1"
          WORD "x"
          PLUS "+"
          INTEGER_LITERAL "1"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        BINARY_EXPR "x + 1"
          WORD "x"
          PLUS "+"
          INTEGER_LITERAL "1"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        BINARY_EXPR "x + 1"
          WORD "x"
          PLUS "+"
          INTEGER_LITERAL "1"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        BINARY_EXPR "x + 1"
          WORD "x"
          PLUS "+"
          INTEGER_LITERAL "1"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        BINARY_EXPR "x + 1"
          WORD "x"
          PLUS "+"
          INTEGER_LITERAL "1"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        SEMICOLON ";"
        R_BRACE "}"

=== ERRORS ===
None
