baml_language/crates/baml_tests/snapshots/formatter/baml_tests__formatter__02_parser__mid_expression_whitespace.snap
---
source: target/debug/build/baml_tests-17af2d4231950a65/out/generated_tests.rs
expression: output
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "foo"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT "let x = 1;"
          KW_LET "let"
          WORD "x"
          EQUALS "="
          INTEGER_LITERAL "1"
          SEMICOLON ";"
        LET_STMT "let y 
    
= 2;"
          KW_LET "let"
          WORD "y"
          EQUALS "="
          INTEGER_LITERAL "2"
          SEMICOLON ";"
        LET_STMT
          KW_LET "let"
          WORD "w"
          EQUALS "="
          BINARY_EXPR
            BINARY_EXPR
              BINARY_EXPR "x 
    
    
    + y"
                WORD "x"
                PLUS "+"
                WORD "y"
              PLUS "+"
              WORD "y"
            PLUS "+"
            WORD "z"
          SEMICOLON ";"
        LET_STMT
          KW_LET "let"
          WORD "z"
          EQUALS "="
          BINARY_EXPR "x 
    
    
    + y"
            WORD "x"
            PLUS "+"
            WORD "y"
          SEMICOLON ";"
        RETURN_STMT "return 
    
    z;"
          KW_RETURN "return"
          WORD "z"
          SEMICOLON ";"
        R_BRACE "}"

=== ERRORS ===
None
