baml_language/crates/baml_tests/snapshots/formatter/baml_tests__formatter__02_parser__weird_comments.snap
---
source: target/debug/build/baml_tests-17af2d4231950a65/out/generated_tests.rs
expression: output
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "Bar"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT "let x = 2;"
          KW_LET "let"
          WORD "x"
          EQUALS "="
          INTEGER_LITERAL "2"
          SEMICOLON ";"
        RETURN_STMT "// comment
  return x;"
          KW_RETURN "return"
          WORD "x"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "HelloWorld"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "name"
        COLON ":"
        TYPE_EXPR "/*test*/ string"
          WORD "string"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    LLM_FUNCTION_BODY
      L_BRACE "{"
      CLIENT_FIELD "/*test*/
  client /*test*/ GPT4"
        KW_CLIENT "client"
        WORD "GPT4"
      PROMPT_FIELD
        WORD "prompt"
        RAW_STRING_LITERAL #"
            Say hello to {{name}}
          "#
          HASH "#"
          QUOTE """
          WORD "Say"
          WORD "hello"
          WORD "to"
          L_BRACE "{"
          L_BRACE "{"
          WORD "name"
          R_BRACE "}"
          R_BRACE "}"
          QUOTE """
          HASH "#"
      R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "User"
    L_BRACE "{"
    FIELD
      WORD "name"
      TYPE_EXPR "/*test*/ string"
        WORD "string"
      ATTRIBUTE
        AT "@"
        WORD "assert"
        ATTRIBUTE_ARGS
          L_PAREN "("
          EXPR "{{ this > 0 }}"
            L_BRACE "{"
            L_BRACE "{"
            WORD "this"
            GREATER ">"
            INTEGER_LITERAL "0"
            R_BRACE "}"
            R_BRACE "}"
          R_PAREN ")"
    FIELD
      WORD "age"
      TYPE_EXPR "int"
        WORD "int"
      ATTRIBUTE "@skip"
        AT "@"
        WORD "skip"
    FIELD
      WORD "val"
      TYPE_EXPR
        L_PAREN "("
        TYPE_EXPR "int/*test*/| /*test*/string"
          WORD "int"
          PIPE "|"
          WORD "string"
        R_PAREN ")"
    R_BRACE "}"

=== ERRORS ===
None
