baml_language/crates/baml_tests/snapshots/formatter/baml_tests__formatter__02_parser__weird_whitespace.snap
---
source: target/debug/build/baml_tests-17af2d4231950a65/out/generated_tests.rs
expression: output
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "Foo"
    L_BRACE "{"
    FIELD
      WORD "field"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE "@skip"
        AT "@"
        WORD "skip"
    FIELD
      WORD "field2"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE "@skip"
        AT "@"
        WORD "skip"
    FIELD
      WORD "field3"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE "@skip"
        AT "@"
        WORD "skip"
    FIELD
      WORD "field4"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE "@skip"
        AT "@"
        WORD "skip"
    FIELD
      WORD "field5"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE "@skip"
        AT "@"
        WORD "skip"
    FIELD
      WORD "field6"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE "@skip"
        AT "@"
        WORD "skip"
    FIELD
      WORD "field7"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE "@skip"
        AT "@"
        WORD "skip"
    FIELD
      WORD "field8"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE "@skip"
        AT "@"
        WORD "skip"
    FIELD
      WORD "field9"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE "@skip"
        AT "@"
        WORD "skip"
    FIELD
      WORD "field10"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE "@skip"
        AT "@"
        WORD "skip"
    R_BRACE "}"
  ENUM_DEF
    KW_ENUM "enum"
    WORD "Bar"
    L_BRACE "{"
    ENUM_VARIANT "Value1"
      WORD "Value1"
    ENUM_VARIANT "Value2"
      WORD "Value2"
    R_BRACE "}"
  CLIENT_DEF
    KW_CLIENT "client"
    CLIENT_TYPE "<llm>"
      LESS "<"
      WORD "llm"
      GREATER ">"
    WORD "GPT4"
    CONFIG_BLOCK
      L_BRACE "{"
      CONFIG_ITEM
        WORD "provider"
        CONFIG_VALUE "openai"
          WORD "openai"
      CONFIG_ITEM
        WORD "model"
        CONFIG_VALUE "gpt-4"
          WORD "gpt-4"
      CONFIG_ITEM
        WORD "options"
        CONFIG_BLOCK
          L_BRACE "{"
          CONFIG_ITEM
            WORD "temperature"
            CONFIG_VALUE "0.7"
              FLOAT_LITERAL "0.7"
          R_BRACE "}"
      R_BRACE "}"
  TEMPLATE_STRING_DEF
    KW_TEMPLATE_STRING "template_string"
    WORD "MyPrompt"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    RAW_STRING_LITERAL #"
You are helpful
"#
      HASH "#"
      QUOTE """
      WORD "You"
      WORD "are"
      WORD "helpful"
      QUOTE """
      HASH "#"
  TEST_DEF
    KW_TEST "test"
    WORD "TestUser"
    CONFIG_BLOCK
      L_BRACE "{"
      CONFIG_ITEM
        WORD "functions"
        CONFIG_VALUE "[GetUser]"
          L_BRACKET "["
          WORD "GetUser"
          R_BRACKET "]"
      CONFIG_ITEM
        WORD "args"
        CONFIG_BLOCK
          L_BRACE "{"
          CONFIG_ITEM
            WORD "user_id"
            CONFIG_VALUE
              STRING_LITERAL "123"
                QUOTE """
                INTEGER_LITERAL "123"
                QUOTE """
          R_BRACE "}"
      R_BRACE "}"
  TYPE_ALIAS_DEF
    WORD "type"
    WORD "UserId"
    EQUALS "="
    TYPE_EXPR "string"
      WORD "string"
  RETRY_POLICY_DEF
    KW_RETRY_POLICY "retry_policy"
    WORD "DefaultRetry"
    CONFIG_BLOCK
      L_BRACE "{"
      CONFIG_ITEM
        WORD "max_retries"
        CONFIG_VALUE "3"
          INTEGER_LITERAL "3"
      CONFIG_ITEM
        WORD "delay_ms"
        CONFIG_VALUE "1000"
          INTEGER_LITERAL "1000"
      R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "HelloWorld"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "name"
        COLON ":"
        TYPE_EXPR "string"
          WORD "string"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    LLM_FUNCTION_BODY
      L_BRACE "{"
      CLIENT_FIELD "client GPT4"
        KW_CLIENT "client"
        WORD "GPT4"
      PROMPT_FIELD
        WORD "prompt"
        RAW_STRING_LITERAL #"
Say hello to{{name}}
"#
          HASH "#"
          QUOTE """
          WORD "Say"
          WORD "hello"
          WORD "to"
          L_BRACE "{"
          L_BRACE "{"
          WORD "name"
          R_BRACE "}"
          R_BRACE "}"
          QUOTE """
          HASH "#"
      R_BRACE "}"

=== ERRORS ===
None
